src/objects/zkmulti__MCUser_Printer__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__DocPrinterTray__c</fullName>
        <label>Doc Printer Tray</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__NonThermalPrinterTray__c</fullName>
        <label>Non Thermal Printer Tray</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Number_Of_Copies__c</fullName>
        <label>Number Of Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__PrinterType__c</fullName>
        <label>Printer Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Printer__c</fullName>
        <label>Printer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScaleComputerId__c</fullName>
        <label>Scale Computer Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScaleDeviceId__c</fullName>
        <label>Scale Device Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScaleName__c</fullName>
        <label>Scale Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ScaleWeightUnit__c</fullName>
        <label>Scale Weight Unit</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Setting_Category__c</fullName>
        <label>Setting Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Setting_Type__c</fullName>
        <label>Setting Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ThermalPrinterTray__c</fullName>
        <label>Thermal Printer Tray</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Printers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Value_Type__c</fullName>
        <label>Value Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>User Printer</label>
    <nameField>
        <displayFormat>UP-{0000}</displayFormat>
        <label>User Printer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Printers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>